--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+.Dropzone {
+  padding-top: 16px;
+  border: 1px black solid;
+  border-radius: 3px;
+  width: 100%;
+  display: inline-block;
+}
+
+.Dragzone {
+  padding-top: 16px;
+  border: 1px #eeeeee dashed;
+  border-width: 2px;  
+  border-radius: 2px;
+  color: #bdbdbd;
+  background-color: #fafafa;
+  border-radius: 3px;
+  width: 100%;
+  display: inline-block;
+  transition: border .24s ease-in-out;
+  text-align: center;    
+}
+
 .App {
   text-align: center;
 }
